# poker-expert

./: .gitignore  db_manager.py  equity_calculator.py  main.py  poker_parser.py  postflop_solver_prd.md  requirements.txt
.cursor/rules/: architecture.mdc  dev-rules.mdc  donot-use-venv-add-to-requirements.mdc  glossary.mdc  project-context.mdc
.cursor/rules/architecture/: RULE.md
.cursor/rules/dev-rules/: RULE.md
.cursor/rules/glossary/: RULE.md
.cursor/rules/project-context/: RULE.md
assets/range/cash6m_200bb_nl50_gto_gto/: info.txt
assets/range/cash6m_50bb_nl50_gto_gto/: info.txt
core/database/: db_manager.py
core/engine/: equity_calculator.py
core/parser/: poker_parser.py
gui/: main_window.py  pages.py  styles.py
gui/components/: __init__.py  hands_table_model.py  stat_card.py
gui/pages/: __init__.py  cash_game.py  dashboard.py  import_page.py  preflop_range.py  replay.py
gui/pages/leak_analyze/: __init__.py  leak_analyze_page.py  preflop_range_check.py
gui/pages/reports/: __init__.py  position_analysis.py  report_page.py
gui/pages/solver/: __init__.py  range_editor.py  results_page.py  results_view.py  settings_panel.py  solver_page.py
gui/widgets/: __init__.py
solver/: __init__.py  card_utils.py  cfr_engine.py  data_types.py  game_tree.py  hand_evaluator.py
solver/bridge/: cpp_cfr_wrapper.py
solver/core/: card_utils.py  cfr_engine.py  data_types.py  game_tree.py  hand_evaluator.py
solver/cpp/: bindings.cpp
solver/cpp/include/: cfr_engine.h  hand_evaluator.h  mmap_buffer.h  types.h
solver/cpp/src/: game_tree_builder.cpp
solver/native/: CMakeLists.txt
solver/native/include/: cfr_types.h  game_tree_builder.h  hand_evaluator.h  types.h
solver/native/src/: cfr_engine.cpp  hand_evaluator.cpp
ui/: main_window.py
ui/components/: __init__.py  stat_card.py
ui/pages/: __init__.py  cash_game.py  dashboard.py  import_page.py  preflop_range.py  replay.py
ui/pages/leak_analyze/: __init__.py  leak_analyze_page.py  preflop_range_check.py
ui/pages/reports/: __init__.py  position_analysis.py  report_page.py
ui/pages/solver/: __init__.py  range_editor.py  results_page.py  (+2 more)
ui/styles/: __init__.py
ui/widgets/: card_selector.py  replay_table.py
(+4249 files in other folders)
